# tbp-parser

./: .dockerignore  .gitignore  404.html  AUTHORS  Dockerfile  README.md  index.html  mkdocs.yml  pyproject.toml  pytest.ini  requirements.txt  sitemap.xml  versions.json
.github/workflows/: docker_build-push.yml  publish-mkdocs.yml  publish-version.yml  pytests.yml  wip_gha_test.yml
_legacy/: CheckInputs.py  Coverage.py  LIMS.py  Laboratorian.py
_legacy/tests/: test_LIMS.py  test_Laboratorian.py  test_Parser.py  test_Row.py  test_Variant.py
algorithm/: index.html
algorithm/interpretation/: index.html
algorithm/technical/: index.html
data/: default-lims-report-format.yml  gene-database._2026_03_03.yml  gene-database_2026-03-03.yml  gene-to-tier_2025-12-10.tsv  tbdb.bed  tngs-expert-rule-regions.bed  tngs-primer-regions.bed  tngs-reportable-regions.bed  who-v2-promoters_2025-12-10.tsv
docs/: index.md  inputs.md  usage.md
docs/algorithm/: globals.md  index.md  interpretation.md  technical.md
docs/inputs/: inputs.md  theiaprok.md
docs/outputs/: coverage.md  index.md  laboratorian.md  lims.md  looker.md  theiaprok.md
docs/versioning/: brief.md  exhaustive.md  index.md
inputs/inputs/: index.html
inputs/theiaprok/: index.html
interpretation_docs/: index.md
main/: 404.html  index.html  sitemap.xml
main/algorithm/: index.html
main/inputs/: index.html
main/outputs/: index.html
main/search/: search_index.json
main/usage/: index.html
main/versioning/: index.html
null/: 404.html  index.html  sitemap.xml
null/algorithm/: index.html
null/inputs/: index.html
null/outputs/: index.html
null/search/: search_index.json
null/usage/: index.html
null/versioning/: index.html
outputs/: index.html
outputs/coverage/: index.html
outputs/laboratorian/: index.html
outputs/lims/: index.html
outputs/looker/: index.html
outputs/theiaprok/: index.html
resources/stylesheets/: pdf.scss
search/: search_index.json
tbp_parser/: CheckInputs.py  Coverage.py  LIMS.py  Laboratorian.py  Looker.py  Parser.py  Row.py  Variant.py  __init__.py  arguments.py  globals.py  tbp_parser.py  tbp_parser_main.py
tbp_parser/Coverage/: __init__.py  bed_parser.py  bed_record.py  coverage_calculator.py  coverage_data.py
tbp_parser/LIMS/: __init__.py  lims_processor.py  lims_record.py  lims_yml_parser.py
tbprofiler_parser/: Annotation.py  Coverage.py  InputTypes.py  LIMS.py  Laboratorian.py  Looker.py  Parser.py  Row.py  Variant.py  __init__.py  globals.py  tbprofiler_parser.py
test/: test_Variant.py
tests/: conftest.py  test.bam  test.bam.bai  test_Coverage.py  test_LIMS.py  test_Laboratorian.py  test_Looker.py  test_Parser.py  test_Row.py  test_Variant.py  test_bed_record.py  test_coverage_calculator.py  test_coverage_data.py  test_globals.py  test_lims_processor.py  test_reporters.py  test_variant_interpreter.py  test_variant_processor.py  test_variant_qc.py
tj-strangler-refactor-dev/: 404.html  index.html  sitemap.xml
usage/: index.html
v1.6.0/: 404.html  sitemap.xml
v2.1.0/: 404.html  index.html  sitemap.xml
v2.1.1/: 404.html  index.html  sitemap.xml
v2.10.0/: 404.html  index.html  sitemap.xml
v2.11.2/: 404.html  index.html  sitemap.xml
v2.11.3/: 404.html  index.html  sitemap.xml
v2.2.0/: 404.html  index.html  sitemap.xml
v2.2.1/: 404.html  index.html  sitemap.xml
v2.2.2/: 404.html  index.html  sitemap.xml
v2.3.0/: 404.html  index.html  sitemap.xml
v2.4.0/: 404.html  index.html  sitemap.xml
v2.4.1/: 404.html  index.html  sitemap.xml
v2.4.2/: 404.html  index.html  sitemap.xml
v2.4.3/: 404.html  index.html  sitemap.xml
v2.4.4/: 404.html  index.html  sitemap.xml
v2.4.5/: 404.html  index.html  sitemap.xml
v2.5.0/: 404.html  index.html  sitemap.xml
v2.5.1/: 404.html  index.html  sitemap.xml
v2.7.0/: 404.html  index.html  sitemap.xml
v2.8.0/: 404.html  index.html  sitemap.xml
v2.8.1/: 404.html  index.html  sitemap.xml
v2.9.0/: 404.html  index.html  sitemap.xml
v2.9.1/: 404.html  index.html  sitemap.xml
v3.0.0/: 404.html  index.html  sitemap.xml
v3.0.1/: 404.html  index.html  sitemap.xml
v3.0.2/: 404.html  index.html  sitemap.xml
v3.0.3/: 404.html  index.html  sitemap.xml
versioning/: index.html
(+540 files in other folders)
