[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "tbp_parser"
authors = [
  {name = "Sage M. Wright", email = "sage.wright@theiagen.com"},
  {name = "Inês Mendes", email = "ines.mendes@theiagen.com"}
]
description = "Parses the TBProfiler output into four files"
readme = "README.md"
requires-python = ">=3.9"
keywords = ["tb", "MtbC", "antimicrobial resistance"]
license = {file = "LICENSE"}
dependencies = [
  "pandas >= 1.4.2",
  "importlib_resources"
]
dynamic = ["version"] 

[tool.setuptools.dynamic]
version = {attr = "tbp_parser.__VERSION__"}

[tool.pytest.ini_options]
pythonpath = [
  ".",
  "tbp_parser"
]